fix layout bug / change App styles

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,6 +7,10 @@
   background-attachment: fixed;
 }
 
+.main {
+  display: contents;
+}
+
 .contentSection {
   position: relative;
   z-index: 2;
